# degenz-lounge

./: .gitignore  DeGeNzPlaYGrounD.tar  Dockerfile  README.md  devcontainer.json  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  notdockercompose.yml  package-lock.json  package.json  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.OLD  Dockerfile.dev  Dockerfile.old  OLDdevcontainer.json  devcontainer.json  devproduction.json  setup.sh
backend/: .env.save  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/agents/: router.py
backend/app/ai_models/: base.py  claude_model.py  deepseek_model.py  factory.py  gemini_model.py  grok_model.py  huggingface_model.py  mistral_model.py  openai_model.py  openrouter_model.py  perplexity_model.py
backend/app/auth/: dependencies.py  router.py
backend/app/chat/: router.py
backend/app/marketplace/: router.py
backend/app/payment/: paypal_client.py  router.py  service.py
backend/app/prompts/: router.py
backend/app/sandbox/: router.py
deployment/: deploy-codespaces.sh  deploy-gcp.sh  deploy-streamlit.sh  deploy-termux.sh
deployment/codespaces/: devcontainer.json  oldmayvedevcontainer.json  setup-codespace.sh
docs/: ai_model_integration.md  architecture_diagram.md  feature_updates.md  payment_integration.md  project_structure.md  system_architecture.md
frontend/: Dockerfile  Dockerfile.OLD  Nockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: run-tests.sh
(+50 files in other folders)
