[tool.poetry]
name = "degenz-lounge-backend"
version = "0.1.0"
description = "Backend for DeGeNz Lounge AI Agent Builder & Library"
authors = ["DeGeNz Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
redis = "^4.5.5"
langchain = "^0.0.200"
supabase = "^1.0.3"
stripe = "^5.4.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
websockets = "^11.0.3"
chromadb = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
